2010-12-15  Alexander V. Lukyanov <lav@yars.free.net>

	* Torrent.cc: better trace messages; reset recv_rate on completion.

2010-11-24  Alexander V. Lukyanov <lav@yars.free.net>

	* CmdExec.cc: fixed setting of cmdline in new jobs.
	* Torrent.cc, lftp_rl.c, xstring.cc: fixed warnings
	  (patch from Openwall, Alexander Peslyak).
	* complete.cc: use CmdExec::is_space for parsing.
	* xstring.h: fixed compilation with non-gcc and old gcc compilers
	  (patch from Openwall, Vasiliy Kulikov).

2010-11-22  Alexander V. Lukyanov <lav@yars.free.net>

	* MirrorJob.cc, SleepJob.cc: use parse_datetime instead of obsolete
	  get_date.
	* CmdExec.cc, CmdExec.h: (AddNewJob) new method.
	* ArgV.cc, ArgV.h: (Combine) add end index argument.
	* Torrent.cc: dispose tracker session when shutting down;
	  divide numwant to number of trackers going to request the peers;
	  better shutting down status; glob local torrent files; use AddNewJob
	  to create multiple torrent jobs.
	* mgetJob.cc: call globfree even when no files found.

2010-11-19  Alexander V. Lukyanov <lav@yars.free.net>

	* Torrent.cc, Torrent.h: add multitracker support.

2010-11-15  Alexander V. Lukyanov <lav@yars.free.net>

	* FileSet.cc: optimize b-search.
	* StatusLine.cc: use tmp xstring.
	* Torrent.cc, Torrent.h: (TorrentTracker) new class;
	  use posix_fallocate to pre-allocate disk space.

2010-10-19  Alexander V. Lukyanov <lav@yars.free.net>

	* CmdExec.cc, CmdExec.h, commands.cc: new CmdExec ctor; `local' builtin.
	* MirrorJob.cc: allow continue of pget.
	* Torrent.cc, Torrent.h: better diag msg; don't show `next tracker in'
	  msg when validating; allow starting of multiple torrents at once;
	  show torrent name in status; add torrent to listener earlier;
	  better handle shutting down of multiple torrents.
	* convert-mozilla-cookies: fix info duplication;
	* pgetJob.cc: save status at the start.

2010-09-09  Alexander V. Lukyanov <lav@yars.free.net>
