@@ -303,7 +303,7 @@ static ResType lftp_vars[] = {
    {"mirror:skip-noaccess",	 "no",    ResMgr::BoolValidate,ResMgr::NoClosure},
 
    {"sftp:max-packets-in-flight","16",	  ResMgr::UNumberValidate,0},
-   {"sftp:protocol-version",	 "4",	  ResMgr::UNumberValidate,0},
+   {"sftp:protocol-version",	 "6",	  ResMgr::UNumberValidate,0},
    {"sftp:size-read",		 "32k",	  ResMgr::UNumberValidate,0},
    {"sftp:size-write",		 "32k",	  ResMgr::UNumberValidate,0},
    {"sftp:connect-program",	 "ssh -a -x",0,0},
